# initiative.sh

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  build.sh  dev-server.sh  test.sh
.github/: FUNDING.yml
.github/workflows/: changelog.yml  release-announce.yml  rust.yml  (+2 more)
cli/: Cargo.toml
cli/src/: lib.rs  light.rs  main.rs  rich.rs
cli/src/rich/: mod.rs  wrap.rs
core/: Cargo.toml
core/src/: foo.rs  lib.rs  scratch.rs  utils.rs
core/src/account/: account_manager.rs  command.rs  mod.rs
core/src/app/: autocomplete.rs  command.rs  context.rs  meta.rs  mod.rs
core/src/app/command/: alias.rs  app.rs  autocomplete.rs  mod.rs  runnable.rs  tutorial.rs  world.rs
core/src/app/parser/: mod.rs
core/src/app/parser/command/: app.rs  mod.rs  storage.rs  world.rs
core/src/app/parser/syntax/: mod.rs  noun.rs  verb.rs
core/src/command/: about.rs  alias.rs  create.rs  load.rs  mod.rs  prelude.rs  save.rs
core/src/command/token/: any_of.rs  any_phrase.rs  any_word.rs  constructors.rs  keyword.rs  keyword_list.rs  mod.rs  name.rs  optional.rs  or.rs  phrase.rs  phrase_unordered.rs  sequence.rs  token_marker_iterator.rs  token_match_iterator.rs  word.rs
core/src/parser/: mod.rs
core/src/reference/: command.rs  mod.rs
core/src/storage/: backup.rs  command.rs  data_store.rs  export.rs  mod.rs  repository.rs
core/src/time/: command.rs  interval.rs  mod.rs
core/src/utils/: case_insensitive_str.rs  mod.rs  quoted_word_chunk.rs  quoted_word_iter.rs  split_multi.rs  substr.rs
core/src/utils/test_utils/: app_meta.rs  assert.rs  data_store.rs  mod.rs  world.rs
core/src/world/: command.rs  demographics.rs  field.rs  mod.rs  syntax.rs  thing.rs  vocabulary.rs  word.rs
core/src/world/command/: autocomplete.rs  mod.rs  parse.rs
core/src/world/location/: building.rs  command.rs  mod.rs  view.rs
core/src/world/location/building/: inn.rs  mod.rs  residence.rs  shop.rs  temple.rs  warehouse.rs
core/src/world/npc/: age.rs  command.rs  gender.rs  mod.rs  size.rs  view.rs
core/src/world/npc/ethnicity/: arabic.rs  celtic.rs  chinese.rs  dragonborn.rs  dwarvish.rs  egyptian.rs  elvish.rs  english.rs  french.rs  german.rs  gnomish.rs  greek.rs  half_elvish.rs  half_orcish.rs  halfling.rs  human.rs  indian.rs  japanese.rs  mesoamerican.rs  mod.rs  niger_congo.rs  norse.rs  orcish.rs  polynesian.rs  roman.rs  slavic.rs  spanish.rs  tiefling.rs  warforged.rs
core/src/world/npc/race/: dragonborn.rs  dwarf.rs  half_elf.rs  half_orc.rs  halfling.rs  human.rs  mod.rs
core/src/world/npc/species/: dragonborn.rs  dwarf.rs  elf.rs  gnome.rs  half_elf.rs  half_orc.rs  halfling.rs  human.rs  mod.rs  tiefling.rs  warforged.rs
core/src/world/place/: mod.rs  view.rs
core/src/world/place/building/: mod.rs
core/src/world/place/building/business/: blacksmith.rs  inn.rs  mod.rs  theater.rs
core/src/world/place/building/education/: mod.rs
core/src/world/place/building/government/: mod.rs
core/src/world/place/building/military/: mod.rs
core/src/world/place/building/religious/: mod.rs  shrine.rs
core/src/world/place/building/travel/: mod.rs
core/src/world/place/location/: mod.rs
core/src/world/place/location/geographical/: beach.rs  canyon.rs  mod.rs
core/src/world/place/location/landmark/: mod.rs
core/src/world/place/location/settlement/: mod.rs
core/src/world/place/region/: mod.rs
core/src/world/place/region/geography/: mod.rs
core/src/world/place/region/political/: mod.rs
core/src/world/region/: mod.rs
core/tests/: app.rs  reference.rs  storage.rs  time.rs  tutorial.rs  world.rs  world_location.rs  world_npc.rs
core/tests/common/: mod.rs
core/tests/integration/: mod.rs
core/tests/integration/app/: changelog.rs  debug.rs  help.rs  mod.rs  tutorial.rs
core/tests/integration/app/app/: about.rs  help.rs  mod.rs  roll.rs
core/tests/integration/reference/: condition.rs  item.rs  item_category.rs  magic_item.rs  mod.rs  open_game_license.rs  spell.rs  spells.rs  traits.rs
core/tests/integration/storage/: export.rs  export_import.rs  journal.rs  load.rs  mod.rs  undo_redo.rs  v1.json
core/tests/integration/storage/change/: delete.rs  mod.rs  save.rs
core/tests/integration/storage/export_import/: mod.rs  v2.json
core/tests/integration/time/: mod.rs
core/tests/integration/world/: create.rs  create_multiple.rs  edit.rs  mod.rs
data/: about.md  changelog.md  help.md  motd.md  ogl-1.0a.md  ogl-1.0a.txt
initiative_macros/: Cargo.toml
macros/: Cargo.toml
macros/src/: as_u8.rs  changelog.rs  command_list.rs  from.rs  lib.rs  motd.rs  reference_enum.rs  token.rs  token_marker.rs  uuid.rs  word_list.rs
macros/src/runnable/: autocomplete.rs  context_aware_parse.rs  display.rs  mod.rs
macros/tests/: integration_tests.rs
macros/tests/integration/: mod.rs
macros/tests/integration/runnable/: collection.rs  mod.rs  struct_cases.rs  tuple_cases.rs  unit_cases.rs
reference/: Cargo.toml
reference/src/: lib.rs
reference/src/srd_5e/: conditions.rs  equipment.rs  mod.rs  spell.rs  traits.rs
reference/src/srd_5e/equipment/: category.rs  item.rs  magic_item.rs  mod.rs
reference/tests/: srd_5e_equipment.rs  srd_5e_equipment_categories.rs  srd_5e_item_categories.rs  srd_5e_items.rs  srd_5e_magic_items.rs  srd_5e_spells.rs
reference/tests/integration/: mod.rs  srd_5e_conditions.rs  srd_5e_item_categories.rs  srd_5e_items.rs  srd_5e_magic_items.rs  srd_5e_spells.rs  srd_5e_traits.rs
scripts/: Cargo.toml  gen_name.sh  names.py
scripts/src/: main.rs
src/: demographics.rs  lib.rs  main.rs  terminal.rs
web/: .gitignore  Cargo.toml  build.sh  package-lock.json  package.json  webpack.config.js
web/js/: database.js  index.html  index.js  privacy.html  terminal.js
web/src/: data_store.rs  lib.rs
web/static/: style.css
web/tests/: web.rs
web/www/: index.html  index.js  package-lock.json  package.json  solarized.css  style.css  webpack.config.js
web/www/public/: style.css
web/www/src/: database.js  index.html  index.js
worker/: deploy.sh  package-lock.json  package.json  wrangler.toml
workers/: deploy.sh
(+106 files in other folders)
