[package]
name = "initiative"
version = "0.1.0"
authors = ["Mikkel Paulson <git@email.mikkel.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
initiative_macros = "0.1"
rand = "0.8"

[workspace]
members = ["initiative_macros"]

[patch.crates-io]
initiative_macros = { path = "initiative_macros" }
