[package]
name = "initiative"
version = "0.1.0"
authors = ["Mikkel Paulson <git@email.mikkel.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
rand = "0.8"
rand_distr = "0.4"
termion = "1.5"

initiative_core = { path = "core" }
initiative_macros = { path = "macros" }

[workspace]
members = ["core", "macros", "scripts"]
