[package]
name = "initiative"
version = "0.1.0"
authors = ["Mikkel Paulson <git@email.mikkel.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
initiative_cli = { path = "cli" }
initiative_core = { path = "core" }

[workspace]
members = ["cli", "core", "macros", "scripts"]
