[package]
name = "initiative-cli"
version = "0.1.0"
authors = ["Mikkel Paulson <git@email.mikkel.ca>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5"
tokio = { version = "1.9", features = ["full"] }

initiative-core = { path = "../core" }

[features]
eberron = ["initiative-core/eberron"]
