[package]
name = "initiative-cli"
version = "0.1.0"
authors = ["Mikkel Paulson <initiative@email.mikkel.ca>"]
edition = "2021"

description = "Terminal interface for initiative.sh, a command line for game masters"
repository = "https://github.com/initiative-sh/initiative.sh"
license = "GPL-3.0-or-later"

[dependencies]
termion = "1.5"
tokio = { version = "1.9", features = ["full"] }

initiative-core = { path = "../core" }
