[package]
name = "initiative-core"
version = "0.1.0"
authors = ["Mikkel Paulson <git@email.mikkel.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
rand = { version = "0.8", default-features = false, features = ["std", "small_rng"] }
rand_distr = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4", "serde"] }

initiative-macros = { path = "../macros" }

[dev-dependencies]
serde_json = "1.0"

[features]
js = ["uuid/stdweb"]
eberron = []
