[package]
name = "initiative-core"
version = "0.1.0"
authors = ["Mikkel Paulson <initiative@email.mikkel.ca>"]
edition = "2021"

description = "Core functionality of initiative.sh, a web-based command line for game masters"
repository = "https://github.com/initiative-sh/initiative.sh"
license = "GPL-3.0-or-later"

[dependencies]
async-trait = "0.1"
caith = "4.2"
futures = "0.3"
rand = { version = "0.8", default-features = false, features = ["std", "small_rng"] }
rand_distr = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4", "serde"] }

initiative-macros = { path = "../macros" }
async-stream = "0.3.5"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["rt"] }
tokio-test = "0.4"

[features]
js = ["uuid/stdweb"]
