[package]
name = "initiative-macros"
version = "0.1.0"
authors = ["Mikkel Paulson <git@email.mikkel.ca>"]
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
initiative-reference = { path = "../reference" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = [ "extra-traits" ] }

[dev-dependencies]
async-trait = "0.1"
initiative-core = { path = "../core" }
tokio-test = "0.4"
