[package]
name = "initiative-macros"
version = "0.1.0"
authors = ["Mikkel Paulson <initiative@email.mikkel.ca>"]
edition = "2021"

description = "Proc macros used by initiative.sh, a web-based command line for game masters"
repository = "https://github.com/initiative-sh/initiative.sh"
license = "GPL-3.0-or-later"

[lib]
proc-macro = true

[dependencies]
initiative-reference = { path = "../reference" }
proc-macro2 = "1.0.86"
quote = "1.0"
regex = "1.7"
syn = "2.0"
