[package]
name = "initiative-reference"
version = "0.1.0"
authors = ["Mikkel Paulson <initiative@email.mikkel.ca>"]
edition = "2021"

description = "SRD reference data used by initiative.sh, a web-based command line for game masters"
repository = "https://github.com/initiative-sh/initiative.sh"
license = "GPL-3.0-or-later"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
