[package]
name = "initiative-scripts"
version = "0.1.0"
authors = ["Mikkel Paulson <initiative@email.mikkel.ca>"]
edition = "2021"

description = "Throwaway scripts used for initiative.sh, a web-based command line for game masters"
repository = "https://github.com/initiative-sh/initiative.sh"
license = "GPL-3.0-or-later"

[dependencies]
regex = "1.4"
json = "0.12"
quick-xml = "0.22"
