[package]
name = "initiative-web"
version = "0.1.0"
authors = ["Mikkel Paulson <git@email.mikkel.ca>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
initiative-core = { path = "../core", features = [ "js" ] }

async-trait = "0.1"
futures = "0.3"
js-sys = "0.3"
wasm-bindgen = { version = "0.2.63", features = [ "serde-serialize" ] }
wasm-bindgen-futures = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

#[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"
