[package]
name = "initiative-web"
version = "0.1.0"
authors = ["Mikkel Paulson <initiative@email.mikkel.ca>"]
edition = "2021"

description = "WebAssembly frontend for initiative.sh, a web-based command line for game masters"
repository = "https://github.com/initiative-sh/initiative.sh"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
initiative-core = { path = "../core", features = [ "js" ] }

async-trait = "0.1"
futures = "0.3"
js-sys = "0.3"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["CustomEvent", "CustomEventInit", "Document", "Element", "Event", "EventTarget", "Window"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

#[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"
